<resources>
    <string name="app_name">Birdie</string>
    <string name="app_logo">Birdie Logo</string>
    <string name="add_photo">Add Photo</string>
    <string name="main_photo">Main Photo</string>
    <string name="photo_2">Photo 2</string>
    <string name="photo_3">Photo 3</string>
    <string name="spinnerContent">Loading</string>
    <string name="launchText">Find Your Perfect Match</string>

    <!-- LoginActivity Strings -->
    <string name="loginGreeting">Welcome Back!</string>
    <string name="loginSubText">Sign in to continue your journey</string>
    <string name="emailLabel">Email</string>
    <string name="emailPlaceholder">johndoe@example.com</string>
    <string name="pwdLabel">Password</string>
    <string name="pwdPlaceholder">Enter your password</string>
    <string name="forgotPwdText">Forgot Password?</string>
    <string name="loginBtnText">Login</string>
    <string name="facebookContent">Facebook Logo</string>
    <string name="appleContent">Apple Logo</string>
    <string name="googleContent">Google Logo</string>
    <string name="registerTextSm">Don\'t you have an account?</string>
    <string name="registerHref">Register</string>
    <string name="dividerTxt">Or continue with</string>

    <!-- RegisterActivity Strings -->
    <string name="registerGreet">Create Account!</string>
    <string name="registerSubText">Join us and find your perfect match</string>
    <string name="nameLabel">Name</string>
    <string name="namePlaceholder">John Doe</string>
    <string name="confirmPwdLabel">Confirm Password</string>
    <string name="confirmPwdPlaceholder">Confirm your password</string>
    <string name="registerBtnTxt">Register</string>
    <string name="signupDividerTxt">Or sign up with</string>
    <string name="privacyCheckboxTxt">I agree to the Terms &amp; Conditions\nand Privacy Policy</string>
    <string name="loginTextSm">Have an account already?</string>
    <string name="loginHref">Login</string>


    <!-- GreetingActivity Strings -->
    <string name="greetingActivityTxt">Welcome to Birdie!</string>
    <string name="greetingSubTxt">Excited to have you on board.\nLet\'s get started on your journey\nwith us.</string>
    <string name="greetingBtnTxt">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_text">Loading...</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="location">Location</string>
    <string name="enter_postcode">Enter postcode</string>
    <string name="use_location">Use location</string>
    <string name="next">Next</string>
    <string name="gender">Gender</string>
    <string name="horoscope">Horoscope</string>
    <string name="select_your_date_of_birth">Select your date of birth</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="please_provide_your_basic_information_to_get_started">Please provide your basic information to get started.</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="more_about_you">More About You</string>
    <string name="we_d_like_to_know_a_bit_more_about_your_preferences">We\'d like to know a bit more about your preferences.</string>
    <string name="select_your_interests">Select Your Interests</string>
    <string name="music">🎵 Music</string>
    <string name="fitness">💪 Fitness</string>
    <string name="travel">✈️️ Travel</string>
    <string name="cooking">🍳 Cooking</string>
    <string name="movies">🎬 Movies</string>
    <string name="art">🎨 Art</string>
    <string name="fashion">👗 Fashion</string>
    <string name="gaming">🎮 Gaming</string>
    <string name="relationship_preference">Relationship Preference</string>
    <string name="straight">Straight</string>
    <string name="lesbian">Lesbian</string>
    <string name="gay">Gay</string>
    <string name="relationshipOther">Other</string>
    <string name="_48">48+</string>
    <string name="_34_48">34-48</string>
    <string name="_23_33">23-33</string>
    <string name="_18_22">18-22</string>
    <string name="looking_for">Looking For</string>

    <string name="date">💑 Date</string>
    <string name="friendship">🤝 Friendship</string>
    <string name="longTerm">💍 Long-Term</string>
    <string name="shortTerm">⏰ Short-Term</string>
    <string name="back">back</string>
    <string name="upload_a_few_photos_that_best_represent_you_profiles_with_pictures_get_more_matches_make_a_great_first_impression">Upload a few photos that best represent you. Profiles with pictures get more matches — make a great first impression!</string>
    <string name="show_yourself">Show Yourself</string>
    <string name="tip">Tip:</string>
    <string name="add_at_least_2_photos_to_increase_your_chances_of_finding_a_match">Add at least 2 photos to increase your chances of finding a match!</string>
    <string name="add_photo_secondary">Add Photo</string>
    <string name="add_main_photo">Add Main Photo</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="header_title_profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="account_settings">Account Settings</string>
    <string name="privacy_and_security_settings">Privacy and security settings</string>
    <string name="upload_a_new_profile_picture">Upload a new profile picture</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="change_your_display_name">Change your display name</string>
    <string name="edit_name">Edit Name</string>
    <string name="john_doe_example_com">john.doe@example.com</string>
    <string name="john_doe">John Doe</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="jd">JD</string>
    <string name="change_your_profile_picture">Change your Profile Picture</string>
    <string name="sign_out_of_your_account">Sign out of your account</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="temporarily_disable_your_account">Temporarily disable your account</string>
    <string name="femaleGender">Female</string>
</resources>