<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <item
        android:id="@+id/profileTab"
        android:title="@string/profile"
        android:icon="@drawable/profile_ico" />
    <item
        android:id="@+id/notificationTab"
        android:title="@string/notification"
        android:icon="@drawable/notif_ico" />
    <item
        android:id="@+id/homeTab"
        android:title=""
        android:enabled="false"
        android:icon="@android:color/transparent" />
    <item
        android:id="@+id/messagesTab"
        android:title="@string/messages"
        android:icon="@drawable/message_ico" />
    <item
        android:id="@+id/settingsTab"
        android:title="@string/settings"
        android:icon="@drawable/settings_ico" />
</menu>